<resources>
    <string name="app_name">pointspace</string>
    <string name="dummy_name">john wick</string>
    <string name="recent_chats">Recent Chats</string>
    <string name="showAll">show more</string>
    <string name="groups_chats">My Groups</string>
    <string name="dummy_number">+94710129486</string>
    <string name="contact_list">Contacts</string>
    <string name="new_user">new user?</string>
    <string name="register">register</string>
    <string name="login">login</string>
    <string name="first_name">First</string>
    <string name="last_name">Last</string>
    <string name="fill_name">First we need your name</string>
    <string name="next">next</string>
    <string name="username">Username</string>
    <string name="fill_details">first, we need some details</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_account">already have an account?</string>
    <string name="dummy_time">10:38 PM</string>
    <string name="dummy_message_text">hey man, what\'s up? this is a testing text to you. peace.</string>
    <string name="type_message">Say something…</string>
    <string name="contact">mobile number</string>
    <string name="name">Name</string>
    <string name="long_text">fsf</string>
    <string name="empty_groups">you don\'t have any groups yet</string>
    <string name="join_group">join group</string>
    <string name="new_group">create new group</string>
    <string name="add_friend">add friend</string>
    <string name="search">search</string>
    <string name="saved_forums">saved forums</string>
    <string name="settings">settings</string>
    <string name="forum_header">forum_header</string>
    <string name="dummy_count">12.2K</string>
    <string name="description">description</string>
    <string name="enter_your_question_here">enter your question here</string>
    <string name="this_is_about">this is about…</string>
    <string name="anyone_can_answer">anyone can answer</string>
    <string name="need_my_approval_for_answer">need my approval for answer</string>
    <string name="submit_forum">submit forum</string>
    <string name="please_select_an_image">please select an image.</string>
    <string name="please_select_a_location">please select a location</string>
    <string name="dummy_email">wanipun96@gmail.com</string>
    <string name="change_image">add photo</string>
    <string name="later">later</string>
    <string name="profile_picture_now">Great! you can choose a profile picture now.</string>
    <string name="like">like</string>
    <string name="likes">likes</string>
    <string name="views">views</string>
    <string name="bookmark">bookmark</string>
    <string name="show_less">show less</string>
    <string name="change_to_dark">do you want to change to dark theme?</string>
    <string name="dark_message">we detect the environment around you a little bit dark. changing to dark theme can optimize your readability</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="don_t_show_me_this_again">don\'t show me this again</string>
    <string name="home">home</string>
    <string name="profile">profile</string>
    <string name="follow">follow</string>
    <string name="enter_your_text_here">Enter your description here…</string>
    <string name="header">Header…</string>
    <string name="privacy">privacy</string>
    <string name="content_image"><![CDATA[<@lazyMessenger:content.type:IMAGE:]]></string>
    <string name="content_map"><![CDATA[<@lazyMessenger:content.type:MAP:]]></string>
    <string name="dummy_category">food</string>
    <string name="common_categories">common categories</string>
    <string name="wait">please wait…</string>
    <string name="please_wait">please wait…</string>
    <string name="ok">OK</string>
    <string name="add_new">add new</string>
    <string name="no_internet_connection_please_check_your_internet_connection">no internet connection. please check your internet connection.</string>
    <string name="internet_connection_is_back">internet connection is back.</string>
    <string name="clear_draft">clear draft</string>
    <string name="draft_forums">draft forums</string>
    <string name="are_you_sure_you_want_to_discard_this_thread">are you sure you want to discard this thread?</string>
    <string name="are_you_sure_you_want_to_delete_this_thread">are you sure you want to delete this thread?</string>
    <string name="remove">remove</string>
    <string name="add_new_image">add new image</string>
    <string name="capture_new_photo">capture new photo</string>
    <string name="add_new_location">add new location</string>
    <string name="place">Place :</string>
    <string name="add_this_location">add this location</string>
    <string name="pick_a_location">Pick a location</string>
    <string name="new_paragraph">new paragraph</string>
    <string name="up_vote">up vote</string>
    <string name="down_vote">down vote</string>
    <string name="comment">comment</string>
    <string name="save_to_drafts">save to drafts</string>
    <string name="drafts">drafts</string>
    <string name="new_forum">new forum</string>
    <string name="reply">reply</string>
    <string name="new_content">new content</string>
    <string name="channel_name">notification</string>
    <string name="channel_description">test description</string>
    <string name="author">Author</string>
    <string name="topic">Topic</string>
    <string name="last_update">Last update</string>
    <string name="up_votes">Up votes</string>
    <string name="down_votes">Down votes</string>
    <string name="edit_forum">edit forum</string>
    <string name="delete">delete</string>
    <string name="done">done</string>
    <string name="search_hint">search…</string>
    <string name="forums">Forums</string>
    <string name="users">Users</string>
    <string name="topics">Topics</string>
    <string name="share">share</string>
    <string name="_1_hr_ago">1 hr. ago</string>
    <string name="bookmarks">bookmarks</string>
    <string name="my_forums">my forums</string>
    <string name="logout">logout</string>
    <string name="comments">comments</string>
    <string name="tag">tag</string>
    <string name="bookmarks_label">Bookmarks</string>

    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>
    <string name="analyze">analyze</string>
    <string name="night_mode">night mode</string>
    <string name="theme">theme</string>

    <string-array name="privacy_choices">
        <item>anyone can answer or comment.</item>
        <item>need my approval to answer or comment.</item>
    </string-array>

</resources>
