<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/home_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/home"
            android:title="@string/home" />
    </group>

    <group
        android:id="@+id/forums"
        android:checkableBehavior="single">
        <item
            android:id="@+id/my_forums"
            android:icon="@drawable/my_forums"
            android:title="@string/my_forums" />

        <item
            android:id="@+id/drafts"
            android:icon="@drawable/drafts"
            android:title="@string/drafts" />

        <item
            android:id="@+id/bookmarks"
            android:icon="@drawable/bookmark"
            android:title="@string/bookmarks" />
    </group>

    <group
        android:id="@+id/settings_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/settings"
            android:icon="@drawable/settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/logout"
            android:title="@string/logout" />
    </group>
</menu>