<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/layout_margin"
    android:clipToPadding="false"
    android:fitsSystemWindows="false"
    app:cardCornerRadius="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fitsSystemWindows="false"
        android:orientation="vertical"
        android:padding="@dimen/layout_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_to_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin"
            android:text="@string/dark_message" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin"
            android:text="@string/don_t_show_me_this_again"
            android:textColor="#7E7A7A" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:fitsSystemWindows="false">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:clipToPadding="false"
                android:fitsSystemWindows="false"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/negative"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/layout_margin"
                    android:text="@string/no"
                    tools:targetApi="o" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/positive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:elevation="0dp"
                    android:fitsSystemWindows="false"
                    android:text="@string/yes"
                    tools:targetApi="o" />

            </LinearLayout>

        </FrameLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>