<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/comment_bg"
    android:orientation="vertical"
    android:padding="@dimen/layout_margin"
    app:cardCornerRadius="0dp"
    app:cardElevation="0dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/image_button">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_pic"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/dummy_pic"
                app:civ_border_color="@color/white"
                app:civ_border_width="1dp" />

            <LinearLayout
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_toEndOf="@id/profile_pic"
                android:layout_toRightOf="@id/profile_pic"
                android:orientation="vertical"
                tools:targetApi="o">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/long_text" />


                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/reply"
                    android:textAllCaps="false"
                    android:visibility="gone"
                    app:cornerRadius="20dp" />

                <View style="@style/Divider" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>